--- a/WebContent/crm/index_headquarters.html
+++ b/WebContent/crm/index_headquarters.html
@@ -398,7 +398,7 @@
       <div class="col-sm-3 no-padding">
         <div id="main2" style="width: 100%;height:300px;"></div>
         <div id="main11" style="width: 100%;height:300px;"></div>
-        <div class="gengduo2" id="turnover_customer_more"><a>更多</a></div>
+        <div class="gengduo" id="turnover_customer_more"><a>更多</a></div>
         <!-- <div class="gengduo" id="businessDep_gmv_more"><a>更多</a></div> -->
       </div>
     </section>
