添加数据管理系统，短信找回密码功能

--- a/WebContent/bizbase/login.html
+++ b/WebContent/bizbase/login.html
@@ -155,7 +155,9 @@
 	        </div>
 	      </form>
 	
-				<div id="login-help" style="margin-top: 10px;" ><a target="_blank" download="w3logo" href="https://imagedata.guoanshequ.com/file_manager/国安数据密码重置手册.pdf" id="forget-password" style="color: #9ea0a3;">忘记密码?</a>
+				<!-- <div id="login-help" style="margin-top: 10px;" ><a target="_blank" download="w3logo" href="https://imagedata.guoanshequ.com/file_manager/国安数据密码重置手册.pdf" id="forget-password" style="color: #9ea0a3;">忘记密码?</a>
+                </div> -->
+                <div id="login-help" style="margin-top: 10px;" ><a href="initreset.html" id="forget-password" style="color: #9ea0a3;">忘记密码?</a>
                 </div>
 	
 	    </div>
