--- a/WebContent/bizbase/validation.html
+++ b/WebContent/bizbase/validation.html
@@ -17,7 +17,7 @@
   <!-- iCheck -->
   <link rel="stylesheet" href="css/blue.css">
   
-   <link rel="stylesheet" href="css/mbox.css">
+  <link rel="stylesheet" href="css/mbox.css">
 
   <style>
     html,body{
@@ -217,9 +217,10 @@ var id = decode64(getUrlParamByKey("id"));
 	function sendMessage(){
 		var hiddenphone = $("#hiddenphone").val();
 		if(hiddenphone==null||hiddenphone==""||hiddenphone.trim()==""){
-			$("#msgdetail").html("电话不能为空！");
+			$("#login_error_msg").html("电话不能为空！");
+			/* $("#msgdetail").html("电话不能为空！");
 			document.getElementById("model_alert").style.display="block";
-			document.getElementById("process_div").style.display="block";
+			document.getElementById("process_div").style.display="block"; */
 		    return;
 		}
 		
@@ -242,12 +243,13 @@ var id = decode64(getUrlParamByKey("id"));
 						if (data.result) {
 							var defaultInfo = $.fromJSON(data.data);
 							if(defaultInfo.code==9000033){
-								$("#msgdetail").html("该电话号码无效！");
+								$("#login_error_msg").html("该电话号码无效！");
+								/* $("#msgdetail").html("该电话号码无效！"); */
 								clearInterval(interval);
 								$("#sendCodeBtn").attr("disabled",false);
 								$("#sendCodeBtn").html("发送");
-								document.getElementById("model_alert").style.display="block";
-								document.getElementById("process_div").style.display="block";
+								/* document.getElementById("model_alert").style.display="block";
+								document.getElementById("process_div").style.display="block"; */
 							}
 						}
 		 });
@@ -268,9 +270,10 @@ var id = decode64(getUrlParamByKey("id"));
 						if (data.result) {
 							var defaultInfo = $.fromJSON(data.data);
 							if(defaultInfo.code==9000003){
-								$("#msgdetail").html(defaultInfo.message);
+								$("#login_error_msg").html(defaultInfo.message);
+								/* $("#msgdetail").html(defaultInfo.message);
 								document.getElementById("model_alert").style.display="block";
-								document.getElementById("process_div").style.display="block";
+								document.getElementById("process_div").style.display="block"; */
 							}else{
 								window.location="resetpwd.html?phone="+encode64(hiddenphone)+"&code="+encode64(valcode);
 							}
@@ -278,9 +281,10 @@ var id = decode64(getUrlParamByKey("id"));
 			   },false);
 			
 		}else{
-			$("#msgdetail").html("请输入短信验证码！");
+			$("#login_error_msg").html("请输入短信验证码！");
+			/* $("#msgdetail").html("请输入短信验证码！");
 			document.getElementById("model_alert").style.display="block";
-			document.getElementById("process_div").style.display="block";
+			document.getElementById("process_div").style.display="block"; */
 		    return;
 		}
 	}
@@ -308,17 +312,19 @@ var id = decode64(getUrlParamByKey("id"));
 								$("#sendCodeBtn").attr("disabled",false);
 							}else{
 								//账号存在异常 
-								$("#msgdetail").html("该账号电话信息异常！");
-								document.getElementById("model_alert").style.display="block";
-								document.getElementById("process_div").style.display="block";
+								$("#login_error_msg").html("该账号电话信息异常！");
+								/* $("#msgdetail").html("该账号电话信息异常！"); */
+								/* document.getElementById("model_alert").style.display="block";
+								document.getElementById("process_div").style.display="block"; */
 								$("#sendCodeBtn").attr("disabled",true);
 							    return;
 							}
 						}else{
 							//账号存在异常 
-							$("#msgdetail").html("账号存在异常！");
+							$("#login_error_msg").html("账号存在异常！");
+							/* $("#msgdetail").html("账号存在异常！");
 							document.getElementById("model_alert").style.display="block";
-							document.getElementById("process_div").style.display="block";
+							document.getElementById("process_div").style.display="block"; */
 							$("#sendCodeBtn").attr("disabled",true);
 						    return;
 						}
