修改社员首页显示文字

--- a/WebContent/crm/member_analysis.html
+++ b/WebContent/crm/member_analysis.html
@@ -110,7 +110,7 @@
                 <p><i class="fa fa-money"></i>成交额</p>
                 <p><small>￥</small><span id="dayDealSum" style="font-size: 34px; color: #ffb959; font-weight: bold;"></span></p>
                 <p><i class="fa fa-file-text"></i>订单量</p>
-                <p><small>(单)</small><span id="dayDealCount" style="font-size: 34px; color: #ffb959; font-weight: bold;"></span></p>
+                <p><small></small><span id="dayDealCount" style="font-size: 34px; color: #ffb959; font-weight: bold;"></span></p>
               </div>
               <ul class="col-sm-6 col-xs-12">
                 <div class="report-tit">社员累计数据</div>
