修改累计数据提示问题

--- a/WebContent/crm/member_analysis.html
+++ b/WebContent/crm/member_analysis.html
@@ -115,13 +115,13 @@
               </div>
               <ul class="col-sm-6 col-xs-12">
                 <div class="report-tit">社员累计数据</div>
-                <li><i class="fa fa-fire"></i>社员总数：<span id="memAll"></span></li>
-                <li><i class="fa fa-file-text-o"></i>订单量：<span id="cmGoodsDealCount"></span></li>
-                <li><i class="fa fa-database"></i>GMV：￥<span id="cmGoodsTurnover"></span></li>
-                <li><i class="fa fa-git-square"></i>订单均价：￥<span id="oneDeal"></span></li>
-                <li><i class="fa fa-bank"></i>E店总数：<span id="eShopCount"></span></li>
-                <li><i class="fa fa-cube"></i>SKU总数：<span id="skuCount"></span></li>
-                <li><i class="fa fa-delicious"></i>SKU动销：<span id="movingPinCount"></span></li>
+                <li title="累计社员总数"><i class="fa fa-fire"></i>社员总数：<span id="memAll"></span></li>
+                <li title="累计订单量"><i class="fa fa-file-text-o"></i>订单量：<span id="cmGoodsDealCount"></span></li>
+                <li title="累计GMV"><i class="fa fa-database"></i>GMV：￥<span id="cmGoodsTurnover"></span></li>
+                <li title="订单均价=GMV÷订单量"><i class="fa fa-git-square"></i>订单均价：￥<span id="oneDeal"></span></li>
+                <li title="安心合作社总数"><i class="fa fa-bank"></i>E店总数：<span id="eShopCount"></span></li>
+                <li title="安心合作社商品总数"><i class="fa fa-cube"></i>SKU总数：<span id="skuCount"></span></li>
+                <li title="安心合作社动销商品数"><i class="fa fa-delicious"></i>SKU动销：<span id="movingPinCount"></span></li>
               </ul>
             </div>
           </div>
