添加门店类型

--- a/WebContent/data_access/add_store.html
+++ b/WebContent/data_access/add_store.html
@@ -109,7 +109,7 @@ $(function(){
 		$("#hezuo1").show();
 		$("#remark").val("");
 		if(stynat=='仓'){
-			$('#storetype').append('<option value="">请选择</option><option value="C">前置仓</option><option value="H">城市仓</option><option value="V">虚拟店(仓店)</option><option value="O">其它</option>');
+			$('#storetype').append('<option value="">请选择</option><option value="H">城市仓</option><option value="C">前置仓</option><option value="V">虚拟店(仓店)</option><option value="O">其它</option>');
 		}else if(stynat=='合作店'){
 			$(".bixuan").show();
 			$(".natter").hide();
@@ -246,7 +246,7 @@ function initview(){
 								$('#storetype').append('<option value="O">其它</option>');
 							}else if(va=="仓"){
 								$("#storetype").empty();
-								$('#storetype').append('<option value="">请选择</option><option value="C">前置仓</option><option value="H">城市仓</option><option value="V">虚拟店(仓店)</option><option value="O">其它</option>');
+								$('#storetype').append('<option value="">请选择</option><option value="H">城市仓</option><option value="C">前置仓</option><option value="V">虚拟店(仓店)</option><option value="O">其它</option>');
 							}else{
 								$("#storetype").empty();
 								$('#storetype').append('<option value="">请选择</option>');
@@ -376,7 +376,7 @@ function initview(){
 								$('#storetype').append('<option value="O">其它</option>');
 							}else if(va=="仓"){
 								$("#storetype").empty();
-								$('#storetype').append('<option value="">请选择</option><option value="C">前置仓</option><option value="H">城市仓</option><option value="V">虚拟店(仓店)</option><option value="O">其它</option>');
+								$('#storetype').append('<option value="">请选择</option><option value="H">城市仓</option><option value="C">前置仓</option><option value="V">虚拟店(仓店)</option><option value="O">其它</option>');
 							}else{
 								$("#storetype").empty();
 								$('#storetype').append('<option value="">请选择</option>');
