修改城市分布提示信息

--- a/WebContent/crm/member_analysis.html
+++ b/WebContent/crm/member_analysis.html
@@ -994,9 +994,9 @@ var showMemberRegist = function (dataServer){
 	    ]
 	}; */
 	  option7 = {
-			    title : {
+/* 			    title : {
 			        text: '社员分布'
-			    },
+			    }, */
 			    tooltip : {
 			        trigger: 'axis',
 			        axisPointer : {            // 坐标轴指示器，坐标轴触发有效
@@ -1165,11 +1165,11 @@ var showCityMember = function(dataserver){
 	  }];
 	  option8 = {
 	    //backgroundColor: '#04243E',
-	    title: [ {
+	   /* title: [  {
 	      text: '城市分布',
 	      right: '15%',
 	      top: '5%',
-	    }],
+	    }], */
 	    tooltip: {
 		      trigger: 'item',
 		      formatter: "{b} : {c} ({d}%)"
