--- a/WebContent/crm/index_headquarters.html
+++ b/WebContent/crm/index_headquarters.html
@@ -344,7 +344,7 @@
 			  <input type="hidden" id="tradesumofmonthOrderHid">
               <input type="hidden" id="tradesumoflastmonthOrderHid">
               <div class="col-sm-4 no-padding gaugetb4" id="tradesumofmonthOrder"></div>
-              <div class="col-sm-2 increase" id="sing_id4"><i class="fa fa-long-arrow-down" id="sign_4"></i></div>
+              <div class="col-sm-2 increase" id="sing_id4"><i class="fa fa-long-arrow-up" id="sign_4"></i></div>
               <div class="col-sm-5 no-padding text-center"><p class="increase" id="order_count_ratio"></p>环比</div>
             </div>
             <div class="info_bottom_dl info_bottom_right pull-right col-sm-6 no-margin">
