--- a/WebContent/crm/office_network_list_add.html
+++ b/WebContent/crm/office_network_list_add.html
@@ -170,6 +170,10 @@
 	 					var IndexSelected = "";
 	 					$(jsonData).each(function(index,element){
 	 						$("#citySelect").append('<option value="'+element.cityid+'">'+element.cityname+'</option>');
+	 						if(index==0){
+	 		 					$("#cityname").val(element.cityname);
+ 					 			$("#cityno").val(element.cityno);
+	 						}
 	                     });
 	 					 $("#citySelect")[0].selectedIndex = IndexSelected;
 	 				}
